<resources>

	<string name="app_name">ATLAS Status</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_last_update_time">Last Update Time</string>
	<string name="menu_about">About</string>
	<string name="title_activity_main">ATLAS Status</string>
	<string name="title_activity_login">CERN SSO</string>
	<string name="title_settings_activity">Settings</string>
	
	<string name="atlas_partition_status">ATLAS Status</string>
   <string name="atlas_partition_start_time">Start Time</string>
   <string name="atlas_project_tag">Project Tag</string>
   <string name="atlas_run_number">Run Number</string>
   <string name="lhc_page_one_status_label">LHC Page 1 Status: </string>
   <string name="lhc_page_one_status_time">Update time</string>
   <string name="lhc_page_one_status">Message from page 1</string>
   <string name="empty"></string>
   
   <string name="atlas_included_hw_label">Included Hardware:</string>
   <string name="atlas_included_hw_muctpi">MuCTPi</string>
   <string name="atlas_included_hw_ctp">CTP</string>
   <string name="atlas_included_hw_l1calo">L1Calo</string>
   <string name="atlas_included_hw_hlt">HTL</string>
   <string name="atlas_included_hw_rpc">RPC</string>
   <string name="atlas_included_hw_tgc">TGC</string>
   <string name="atlas_included_hw_mdt">MDT</string>
   <string name="atlas_included_hw_csc">CSC</string>
   <string name="atlas_included_hw_lar">LAR</string>
   <string name="atlas_included_hw_tile">TILE</string>
   <string name="atlas_included_hw_pix">PIX</string>
   <string name="atlas_included_hw_sct">SCT</string>
   <string name="atlas_included_hw_trt">TRT</string>
   <string name="atlas_included_hw_lucid">LUCID</string>
   <string name="atlas_included_hw_bcm">BCM</string>
   <string name="atlas_included_hw_alfa">ALFA</string>
   <string name="atlas_included_hw_zdc">ZDC</string>
   
   <string name="top_level_pref">App Preferences</string>
   <string name="pref_syncFrequency">Sync Frequency</string>
   <string name="pref_syncFrequencyDialogTitle">Sync Frequency</string>
   
   <string name="no_network_connection">No Network Connection</string>
   <string name="no_network_connection_title">No Network Connection Title</string>
   <string name="no_network_connection_settings">Network Settings</string>
   <string name="no_network_connection_cancel">Cancel</string>
   
   <string name="atlas_busy_summary_label">Busy Status:</string>
   <string name="atlas_busy_summary_high">Busy High</string>
   <string name="atlas_busy_summary_low">Busy Low</string>
   
   <string name="atlas_ready4physics">ATLAS Ready</string>
   <string name="lhc_stable_beams_flag">LHC Stable Beams</string>
   <string name="lhc_beam_mode">LHC Beam Mode</string>
   
   <string name="busy_final_veto_label">Final Trigger Veto</string>
   <string name="busy_ctp_backplane_label">CTP Backplane</string>
   <string name="busy_ctp_deadtime_label">Deadtime</string>
   <string name="busy_ctpout12_label">CTPOUT12</string>
   <string name="busy_ctpout13_label">CTPOUT13</string>
   <string name="busy_ctpout14_label">CTPOUT14</string>
   <string name="busy_ctpout15_label">CTPOUT15</string>
   <string name="busy_ctpmi_label">CTPMI</string>
   <string name="busy_ctpcore_label">CTPCORE</string>
   

</resources>