<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:custom="http://schemas.android.com/apk/res/com.parton.atlasStatus"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
   android:background="@drawable/atlas_logo_opacity10" >
	
	
   <LinearLayout
      android:id="@+id/atlas_run_status_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="25dp"
      android:layout_alignParentLeft="true"
      android:layout_margin="5dp"
      android:gravity="fill_horizontal"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_run_number"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_margin="0dp"
         android:layout_weight="1"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_run_number"
         android:textSize="20dp" />

      <com.parton.atlasStatus.PartitionStatusView
         android:id="@+id/atlas_partition_status"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_margin="0dp"
         android:layout_weight="1"
         android:background="@color/partition_status_NONE"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_partition_status"
         android:textSize="20dp" />
   </LinearLayout>
   
   <LinearLayout
      android:id="@+id/atlas_run_info_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="25dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/atlas_run_status_linear_layout"
      android:layout_margin="5dp"
      android:gravity="fill_horizontal"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_project_tag"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_margin="0dp"
         android:layout_weight="3"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_project_tag"
         android:textSize="20dp" />

      <TextView
         android:id="@+id/atlas_partition_start_time"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_margin="0dp"
         android:layout_weight="2"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_partition_start_time"
         android:textSize="20dp" />
   </LinearLayout>
   

   <TextView
      android:id="@+id/horizontal_rule1"
      android:layout_width="fill_parent"
      android:layout_height="2dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/atlas_run_info_linear_layout"
      android:layout_margin="2dp"
      android:background="@color/black"
      android:gravity="center_horizontal|center_vertical"
      android:text="@string/empty" />

   <LinearLayout
      android:id="@+id/atlas_busy_summary_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="25dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/horizontal_rule1"
      android:layout_margin="5dp"
      android:gravity="fill_horizontal"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/busy_summary_label"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_margin="0dp"
         android:layout_weight="1"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_busy_summary_label"
         android:textSize="20dp" />
      
      <com.parton.atlasStatus.BusyStatusBar android:id="@+id/busy_summary_high"
	      android:layout_width="fill_parent"
	      android:layout_height="25dp"
	      android:layout_marginRight="5dp"
         android:layout_weight="1"
	      android:progress="0"
	      android:max="100"
	      style="@android:style/Widget.ProgressBar.Horizontal"
	      custom:enabled="true"
	      custom:name="Priority High"
	      custom:text_mode="TEXT_PERCENT"
	      />
      
      <com.parton.atlasStatus.BusyStatusBar android:id="@+id/busy_summary_low"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_marginRight="5dp"
         android:layout_weight="1"
         android:progress="0"
         android:max="100"
         style="@android:style/Widget.ProgressBar.Horizontal"
         custom:enabled="true"
         custom:name="Priority Low"
         custom:text_mode="TEXT_PERCENT"
         />
      
   </LinearLayout>

   <TextView
      android:id="@+id/horizontal_rule2"
      android:layout_width="fill_parent"
      android:layout_height="2dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/atlas_busy_summary_linear_layout"
      android:layout_margin="2dp"
      android:background="@color/black"
      android:gravity="center_horizontal|center_vertical"
      android:text="@string/empty" />

   
   
   <LinearLayout
      android:id="@+id/atlas_run_ready_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="25dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/horizontal_rule2"
      android:layout_margin="5dp"
      android:gravity="fill_horizontal"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_ready4physics"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_margin="0dp"
         android:layout_weight="3"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_ready4physics"
         android:textSize="20dp" />

      <TextView
         android:id="@+id/lhc_stable_beams_flag"
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_weight="2"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/lhc_stable_beams_flag"
         android:textSize="20dp" />
   </LinearLayout>
   
   <TextView 
      android:id="@+id/lhc_beam_mode"
      android:layout_width="fill_parent"
      android:layout_height="25dp"
      android:layout_below="@id/atlas_run_ready_linear_layout"
      android:layout_margin="5dp"
      android:gravity="center_horizontal|center_vertical"
      android:text="@string/lhc_beam_mode"
      android:textSize="20dp"
      />
   
   
   <RelativeLayout
      android:id="@+id/lhc_status_layout"
      android:layout_width="fill_parent"
      android:layout_height="100dp"
      android:layout_below="@id/lhc_beam_mode"
      android:background="@color/black" >

      <TextView
         android:id="@+id/lhc_page_one_status_label"
         android:layout_width="150dp"
         android:layout_height="20dp"
         android:layout_alignParentLeft="true"
         android:layout_margin="5dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/lhc_page_one_status_label"
         android:textColor="@color/white" />

      <TextView
         android:id="@+id/lhc_page_one_status_time"
         android:layout_width="150dp"
         android:layout_height="20dp"
         android:layout_alignParentRight="true"
         android:layout_margin="5dp"
         android:layout_toRightOf="@id/lhc_page_one_status_label"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/lhc_page_one_status_time"
         android:textColor="@color/white" />

      <TextView
         android:id="@+id/lhc_page_one_status"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/lhc_page_one_status_label"
         android:layout_margin="5dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/lhc_page_one_status"
         android:textColor="@color/white" />
   </RelativeLayout>

   
   <TextView
      android:id="@+id/atlas_included_hw_label"
      android:layout_width="fill_parent"
      android:layout_height="25dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/lhc_status_layout"
      android:layout_marginLeft="15dp"
      android:gravity="center_vertical"
      android:text="@string/atlas_included_hw_label"
      android:textSize="20dp" />
   
   <TextView
      android:id="@+id/horizontal_rule3"
      android:layout_width="fill_parent"
      android:layout_height="2dp"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/atlas_included_hw_label"
      android:layout_margin="2dp"
      android:background="@color/black"
      android:gravity="center_horizontal|center_vertical"
      android:text="@string/empty" />
   
   <LinearLayout
      android:id="@+id/atlas_included_hw_trigger_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/horizontal_rule3"
      android:layout_margin="5dp"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_included_hw_muctpi"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_muctpi" />

      <TextView
         android:id="@+id/atlas_included_hw_ctp"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_ctp" />

      <TextView
         android:id="@+id/atlas_included_hw_l1calo"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_l1calo" />

      <TextView
         android:id="@+id/atlas_included_hw_hlt"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_hlt" />
   </LinearLayout>

   <LinearLayout
      android:id="@+id/atlas_included_hw_muon_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/atlas_included_hw_trigger_linear_layout"
      android:layout_margin="5dp"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_included_hw_rpc"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_rpc" />

      <TextView
         android:id="@+id/atlas_included_hw_tgc"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_tgc" />

      <TextView
         android:id="@+id/atlas_included_hw_mdt"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_mdt" />

      <TextView
         android:id="@+id/atlas_included_hw_csc"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_csc" />
   </LinearLayout>

   <LinearLayout
      android:id="@+id/atlas_included_hw_calo_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/atlas_included_hw_muon_linear_layout"
      android:layout_margin="5dp"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_included_hw_lar"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_lar" />

      <TextView
         android:id="@+id/atlas_included_hw_tile"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_tile" />
   </LinearLayout>

   <LinearLayout
      android:id="@+id/atlas_included_hw_track_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/atlas_included_hw_calo_linear_layout"
      android:layout_margin="5dp"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_included_hw_pix"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_pix" />

      <TextView
         android:id="@+id/atlas_included_hw_sct"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_sct" />

      <TextView
         android:id="@+id/atlas_included_hw_trt"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_trt" />
   </LinearLayout>

   <LinearLayout
      android:id="@+id/atlas_included_hw_forward_linear_layout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/atlas_included_hw_track_linear_layout"
      android:layout_margin="5dp"
      android:orientation="horizontal" >

      <TextView
         android:id="@+id/atlas_included_hw_lucid"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_lucid" />

      <TextView
         android:id="@+id/atlas_included_hw_bcm"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_bcm" />

      <TextView
         android:id="@+id/atlas_included_hw_alfa"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_alfa" />

      <TextView
         android:id="@+id/atlas_included_hw_zdc"
         android:layout_width="70dp"
         android:layout_height="25dp"
         android:layout_margin="5dp"
         android:background="@color/detector_unknown"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/atlas_included_hw_zdc" />
   </LinearLayout>

</RelativeLayout>